homework done-2